--- a/index.html
+++ b/index.html
@@ -19,29 +19,26 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">About</a>
+                        <a href="#main-title">About</a>
                     </li>
                     <li>
-                        <a href="">Menu</a>
+                        <a href="#section-one">Menu</a>
                     </li>
                     <li>
-                        <a href="">Locations</a>
+                        <a href="#section-three">Locations</a>
                     </li>
                     <li>
-                        <a href="">Gallery</a>
+                        <a href="#section-two">Reviews</a>
                     </li>
                     <li>
-                        <a href="">Reviews</a>
-                    </li>
-                    <li>
-                        <a href="">Contact</a>
+                        <a href="#section-three">Contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <section class="top-section">
-            <div class="main-image"><img src="img/download.jpg" alt="green beans" /></div>
-            <div class="main-title">
+            <div class="main-image"><img src="img/hero-image.png" alt="green beans" /></div>
+            <div id="main-title">
                 <h2>Welcome to our little corner of the internet!</h2>
                 <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food.
                     Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our
@@ -50,7 +47,7 @@
             </div>
         </section>
         <section class="bottom-section">
-            <div class="section-one">
+            <div id="section-one">
                 <h3>Today's Specials</h3>
                 <ul class="menu">
                     <li>Flaming Hummus &amp; Falafel Salad</li>
@@ -58,13 +55,13 @@
                     <li>Green Gloves Tamales</li>
                 </ul>
             </div>
-            <div class="section-two">
+            <div id="section-two">
                 <h3>Our Awesome Reviews</h3>
                 <p class="reviews">"I got so excited about the yumminess of the falafel salad that I am typing this
                     review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't
                     wait see you Rogue Pickings again tomorrow!"</p>
             </div>
-            <div class="section-three">
+            <div id="section-three">
                 <h3>Contact</h3>
                 <p class="address">1001 Potrero Avenue<br>
                     San Francisco, CA 94110<br>
